--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     <section class="project">
       <img  class="photo" src="imagesUpdated/UPC.png" alt="UPC Figma working environment screenshot">
         <!-- <a href=""> -->
-          <div class="overlay">
-             <div class="overlay_description">An internal application that helps onboarding Global Payments' merchants and partners onto our API.</div><!--overlay description-->
-          </div><!--overlay end-->
+          <h3 class="project-title">Unified Payments Console</h3>
+            <p class="project-description">
+              An internal application that helps onboarding Global Payments' merchants and partners onto our API.
+            </p>
         </a>
     </section>
 
@@ -184,7 +185,7 @@
          <a href="TNRHumane.html">
            <div class="overlay">
               <div class="overlay_description">
-                TNRHumane Case Study (UX/UI)</div><!--overlay description-->
+                TNRHumane Case Study (UX/UI)</div><!--overlay description--
            </div><!--overlay end
          </a>
      </section>
@@ -194,7 +195,7 @@
         <img  class="photo" src="imagesUpdated/virtboxhmpg.png" alt="virtBoxpProject background">
           <a href="virtBox.html">
             <div class="overlay">
-               <div class="overlay_description">VirtBox Case Study (UX/UI)</div><!--overlay description-->
+               <div class="overlay_description">VirtBox Case Study (UX/UI)</div><!--overlay description--
             </div><!--overlay end--
           </a>
       </section>
@@ -206,7 +207,7 @@
               <a href="uiChallenge.html">
                 <div class="overlay">
                    <div class="overlay_description">
-                     Daily UI Challenge</div><!--overlay description-->
+                     Daily UI Challenge</div><!--overlay description--
                 </div><!--overlay end
               </a>
           </section>
@@ -306,4 +307,3 @@
 
   </body>
   </html>
-
