--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class="project">
       <img  class="photo" src="imagesUpdated/UPC.png" alt="UPC Figma working environment screenshot">
         <!-- <a href=""> -->
-          <h3 class="project-title">Unified Payments Console</h3>
+          <h3 class="project-title">Unified Payments Console (Contact for Access)</h3>
             <p class="project-description">
               An internal application that helps onboarding Global Payments' merchants and partners onto our API.
             </p>
@@ -83,9 +83,10 @@
     <section class="project">
       <img  class="photo" src="imagesUpdated/API Explorer.png" alt="Showcasing different part of the API Explorer screen">
         <!-- <a href=""> -->
-          <div class="overlay">
-             <div class="overlay_description">An overhauled of Global Payments' API Explorer to make it faster, clearer, and easier for developers to discover, test, and integrate our APIs.</div><!--overlay description-->
-          </div><!--overlay end-->
+        <h3 class="project-title">API Explorer (Contact for Access)</h3>
+            <p class="project-description">
+              An overhauled of Global Payments' API Explorer to make it faster, clearer, and easier for developers to discover, test, and integrate our APIs.
+            </p>
         </a>
     </section>
 
@@ -93,9 +94,10 @@
     <section class="project">
       <img  class="photo" src="imagesUpdated/CAB.png" alt="Customer Advisory Website Screenshots in destop and mobile screens">
         <!-- <a href=""> -->
-          <div class="overlay">
-             <div class="overlay_description">I designed and developed our Customer Advisory Board website and email template from scratch within 5 days to help gather feedback from users and help our busy UI developer with his workload.</div><!--overlay description-->
-          </div><!--overlay end-->
+          <h3 class="project-title">Customer Advisory Board (Contact for Access)</h3>
+            <p class="project-description">
+              I designed and developed our Customer Advisory Board website and email template from scratch within 5 days to help gather feedback from users and help our busy UI developer with his workload.
+            </p>
         </a>
     </section>
 
@@ -103,9 +105,10 @@
     <section class="project">
       <img  class="photo" src="imagesUpdated/Pivot.png" alt="Showcasing different variations of the word Pivot">
         <!-- <a href=""> -->
-          <div class="overlay">
-             <div class="overlay_description">I helped brainstorm logo ideas for our design team’s EOY event based on the pivot scene from Friends (which I’ve never watched).</div><!--overlay description-->
-          </div><!--overlay end-->
+          <h3 class="project-title">Team EOY Event Logo (Contact for Access)</h3>
+            <p class="project-description">
+              I helped brainstorm logo ideas for our design team’s EOY event based on the pivot scene from Friends (which I’ve never watched).
+            </p>
         </a>
     </section>
 
@@ -113,9 +116,10 @@
     <section class="project">
       <img  class="photo" src="imagesUpdated/UX Reference Library.png" alt="UX Reference Library Screenshot">
         <!-- <a href=""> -->
-          <div class="overlay">
-             <div class="overlay_description">A passion project for our design team to help reduce double effort in solving redundant design problems.</div><!--overlay description-->
-          </div><!--overlay end-->
+          <h3 class="project-title">UX Reference Library (Contact for Access)</h3>
+            <p class="project-description">
+              A passion project for our design team to help reduce double effort in solving redundant design problems.
+            </p>
         </a>
     </section>
 
@@ -123,9 +127,10 @@
     <section class="project">
       <img  class="photo" src="imagesUpdated/GlobalPayments.png" alt="Global Payments Logo">
         <!-- <a href=""> -->
-          <div class="overlay">
-             <div class="overlay_description">A year long project at Global Payments that leveraged Salesforce technologies to merge 5 parts of the businesses into 1 uniformed experience (Contact me for access)</div><!--overlay description-->
-          </div><!--overlay end-->
+       <h3 class="project-title">TAM Servicing (Contact for Access)</h3>
+            <p class="project-description">
+              A year long project at Global Payments that leveraged Salesforce technologies to merge 5 parts of the businesses into 1 uniformed experience (Contact me for access)
+            </p>
         </a>
     </section>
 
@@ -307,3 +312,4 @@
 
   </body>
   </html>
+
