--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <script>
       function openProject(url) {
         const password = "CaseStudyPass"; // change this
-        const entered = prompt("This project is private. Enter password:");
+        const entered = prompt("This project is private. Please enter password:");
       
         if (entered === password) {
           window.location.href = url;
@@ -201,5 +201,6 @@
 
   </body>
   </html>
+
 
 
