--- a/upc.html
+++ b/upc.html
@@ -60,16 +60,14 @@
           </section>
       </header>
       <main>
-        <!-- FULL BIO -->
-        <iframe 
-          src="https://docs.google.com/presentation/d/e/2PACX-1vQvvh2G4tPk4Hly80JbxZuVFAtzwTi5--Wgj7fwKecrYWDKy1kc8ZvwVk4sV2LhCDFzvd_8vrmvYzmD/pubembed?start=false&loop=false&delayms=3000" 
-          frameborder="0" 
-          width="960" 
-          height="569" 
-          allowfullscreen="true" 
-          mozallowfullscreen="true" 
-          webkitallowfullscreen="true">
-        </iframe>
+        <!-- sLIDES -->
+        <div class="slide-container">
+          <iframe 
+            src="https://docs.google.com/presentation/d/e/2PACX-1vQvvh2G4tPk4Hly80JbxZuVFAtzwTi5--Wgj7fwKecrYWDKy1kc8ZvwVk4sV2LhCDFzvd_8vrmvYzmD/pubembed?start=false&loop=false&delayms=3000" 
+            allowfullscreen="true">
+          </iframe>
+        </div>
+
 
         </main>
         <footer> <!-- background -->
