--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section class="project">
           <img class="photo" src="imagesUpdated/UPC.png" alt="UPC Figma working environment screenshot">
     
-          <h3 class="project-title">Global Payments UPC</h3>
+          <h3 class="project-title">Unified Payments Console</h3>
           <p class="project-description">
             An internal application that helps onboarding Global Payments' merchants and partners onto our API.
           </p>
@@ -201,6 +201,7 @@
 
   </body>
   </html>
+
 
 
 
