--- a/upc.html
+++ b/upc.html
@@ -45,18 +45,13 @@
         </div>
 
         <!-- hero unit -->
-        <section class="intro">
-          <div class="grid">
-            <div class="whoIAm">
-                <h1>Tristine Nguyen</h1>
-                  <hr>
-                    <h3>Self-learner | cat advocate | food enthusiast.</h3>
-                      <p>I’m a designer with a background in Management Information Systems.
-                        My background helped me learn to code and nurtured my goal to create user-centered design.
-                        I care for homeless cats in the community.
-                        My passion to help animals enhances my ability to empathize with my users.</p>
+        <section class="hero"> <!-- background -->
+            <div class="grid1">
+              <div class="introduction">
+                <h1>Unified Payments Console</h1>
+                  <h3>I'm in the process of updating my portfolio. Until the new version is ready, you can view this project via the Google Slides presentation below.</h3>
+                </div>
             </div>
-           </div>
           </section>
       </header>
       <main>
@@ -67,7 +62,6 @@
             allowfullscreen="true">
           </iframe>
         </div>
-
 
         </main>
         <footer> <!-- background -->
