--- a/upc.html
+++ b/upc.html
@@ -49,7 +49,7 @@
               
               <div class="introduction">
                 <h1>Unified Payments Console</h1>
-                  <p>h3I'm in the process of updating my portfolio. Until the new version is ready, you can view this project via the Google Slides presentation below.</p>
+                  <p>I'm in the process of updating my portfolio. Until the new version is ready, you can view this project via the Google Slides presentation below.</p>
                 </div>
               
               <div class="slide-container">
