--- a/upc.html
+++ b/upc.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Tristine Nguyen</title>
   <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/bio.css">
   <!-- Google Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
