--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                data-period="50"
                data-rotate='[ " Tristine.", " a UX/UI designer.", " an empathizer." ]'></span></em>
           </h1>
-            <h3>Based in <em class="bold">Atlanta, GA.</em></h3>
-            <h3>I solve problems with empathy to connect people together.</h3>
+            <h3>Currently based in <em class="bold">Atlanta, GA,</em> , I design meaningful moments and beautiful products at Global Payments—crafting solutions that are scalable, functional, and thoughtfully designed.</h3>
           </div>
 
         <div class="down-arrow">
@@ -201,6 +200,7 @@
 
   </body>
   </html>
+
 
 
 
