--- a/index.html
+++ b/index.html
@@ -50,13 +50,9 @@
     <section class="hero"> <!-- background -->
       <div class="grid1">
         <div class="introduction">
-          <h1>Hi! I'm <em class="bold">
-            <span
-               class="txt-rotate"
-               data-period="50"
-               data-rotate='[ " Tristine.", " a UX/UI designer.", " an empathizer." ]'></span></em>
-          </h1>
-            <h3>Currently based in <em class="bold">Atlanta, GA,</em> , I design meaningful moments and beautiful products at Global Payments—crafting solutions that are scalable, functional, and thoughtfully designed.</h3>
+          <h1>Hi! I'm <em class="bold">Tristine</em> 👋</h1>
+            <h3>Currently based in <em class="bold">Atlanta, GA.</em></h3>
+            <h3>I design meaningful moments and beautiful products at Global Payments—crafting solutions that are scalable, functional, and thoughtfully designed.</h3>
           </div>
 
         <div class="down-arrow">
@@ -127,18 +123,6 @@
         </section>
       </a>
     
-      <!-- TAM Servicing -->
-      <a href="#" onclick="return openProject('tam.html');">
-        <section class="project">
-          <img class="photo" src="imagesUpdated/GlobalPayments.png" alt="Global Payments Logo">
-    
-          <h3 class="project-title">TAM Servicing</h3>
-          <p class="project-description">
-            A year-long project leveraging Salesforce to unify five business units into one cohesive platform.
-          </p>
-        </section>
-      </a>
-
   </main>
   <footer> <!-- background -->
       <section class="footer-content">
@@ -200,6 +184,7 @@
 
   </body>
   </html>
+
 
 
 
