--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- Global Payments UPC -->
       <a href="#" onclick="return openProject('upc.html');">
         <section class="project">
-          <img class="photo" src="imagesUpdated/UPC.png" alt="UPC Figma working environment screenshot">
+          <img class="photo" src="imagesUpdated/UPC.png" alt="Screenshots of Unified Payments Console dashboard">
     
           <h3 class="project-title">Unified Payments Console</h3>
           <p class="project-description">
@@ -184,6 +184,7 @@
 
   </body>
   </html>
+
 
 
 
